# test-tikckets

./: .env.example  .gitignore  Makefile  docker-compose.yml  readme.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/tickets/: models.py  serializers.py  urls.py  views.py
backend/tickets/management/commands/: seed.py  seed_if_empty.py
backend/tickets/migrations/: 0001_initial.py  0002_ticketevent_event_search_gin.py  0003_remove_ticketevent_ticket_even_city_0ed586_idx_and_more.py
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/app/: tailwind.css  types.ts
frontend/app/components/: card.vue  event-detail.vue  nav.vue  search-input.vue  sort.vue  ticket-detail.vue
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
